@@ -6,6 +6,7 @@ exist in matlab(TM) but have proven themselves to be useful nonetheless.
 The majority of them, however, have matlab analogs
 
 _Plotting commands
+  annotate  - annotate something in the figure
   arrow     - add an arrow to the axes
   axes      - Create a new axes
   axhline   - draw a horizontal line across axes
@@ -222,7 +223,7 @@ else:
 
 from image import imread as _imread
 from lines import Line2D
-from text import Text
+from text import Text, Annotation
 from patches import Polygon, Rectangle, Circle, Arrow
 from transforms import blend_xy_sep_transform
 from widgets import SubplotTool, Button, Slider, Widget
@@ -575,6 +576,7 @@ def raise_msg_to_str(msg):
     if not is_string_like(msg):
         msg = '\n'.join(map(str, msg))
     return msg
+
 
 #----- Now we get started with the matlab(TM) commands  ----#
 
@@ -1521,6 +1523,14 @@ def box(on=None):
     ax.set_frame_on(on)
     draw_if_interactive()
 
+def annotate(*args, **kwargs):
+    a = Annotation(*args, **kwargs)
+    ax = gca()
+    ax.add_artist(a)
+    draw_if_interactive()
+annotate.__doc__ = "annotate(artist, s, loc=None, padx='auto', pady='auto', autopad=3, lineprops=None,**props)\n\n"+Annotation.__init__.__doc__
+    
+    
 ### The following functions were autogenerated by the boilerplate.py
 ### script.  They are simple wrappers around Axes methods.
 
